--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <div class="about__box">
                             <i class='bx bx-award about__icon'></i>
                             <h3 class="about__title">Experience</h3>
-                            <span class="about__subtitle">1 Year</span>
+                            <span class="about__subtitle">2 Years +</span>
                         </div>
                         <div class="about__box">
                             <i class='bx bxs-briefcase-alt about__icon'></i>
