--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <h3 class="home__education">Full Stack Developer</h1>
                         <div class="home__buttons">
 
-                            <a download href="./assets/img/Resume.pdf"
+                            <a download href="./assets/img/Atish Kumar_resume.pdf"
                                 class="button button--ghost">Download CV</a>
                             <a href="#about" class="button button--ghost">About Me</a>
                         </div>
@@ -104,7 +104,7 @@
                         <div class="about__box">
                             <i class='bx bxs-briefcase-alt about__icon'></i>
                             <h3 class="about__title">Completed Projects</h3>
-                            <span class="about__subtitle">10+</span>
+                            <span class="about__subtitle">50+</span>
                         </div>
                         <div class="about__box">
                             <i class='bx bx-support about__icon'></i>
