--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <h3 class="home__education">Full Stack Developer</h1>
                         <div class="home__buttons">
 
-                            <a download href="./assets/img/Atish Kumar_resume.pdf"
+                            <a download href="./assets/img/Atish_Kumar_Resume.pdf"
                                 class="button button--ghost">Download CV</a>
                             <a href="#about" class="button button--ghost">About Me</a>
                         </div>
