--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     <div class="work__card mix ecomm">
                         <img src="assets/img/home-1.jpg" alt="" class="work__img">
                         <h3 class="work__title">E-comm</h3>
-                        <a href="https://ecartatish.herokuapp.com/" class="work__button">
+                        <a href="https://rcplive.onrender.com/" class="work__button">
                             Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                         </a>
                     </div>
@@ -317,14 +317,14 @@
                     <div class="work__card mix social">
                         <img src="assets/img/Social.png" alt="" class="work__img">
                         <h3 class="work__title">Social Media (Present in Ecomm as well)</h3>
-                        <a href="#" class="work__button">
+                        <a href="https://rcplive.onrender.com/" class="work__button">
                             Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                         </a>
                     </div>
                     <div class="work__card mix social">
                         <img src="assets/img/message1.png" alt="" class="work__img">
                         <h3 class="work__title">Chat (Present in Ecomm as well)</h3>
-                        <a href="#" class="work__button">
+                        <a href="https://rcplive.onrender.com/" class="work__button">
                             Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                         </a>
                     </div>
