--- a/index.html
+++ b/index.html
@@ -343,10 +343,10 @@
                         </a>
                     </div>
                     <div class="work__card mix management">
-                        <img src="assets/img/cafe.jpg" alt="" class="work__img">
-                        <h3 class="work__title">Cafe Management</h3>
-                        <a download href="./assets/img/cafe management system.rar" class="work__button">
-                            Download <i class='bx bx-down-arrow-alt work__icon_download'></i>
+                        <img src="assets/img/api_screen.png" alt="" class="work__img">
+                        <h3 class="work__title">Product API</h3>
+                        <a href="https://rcplive.onrender.com/api/product/" class="work__button">
+                            Demo <i class='bx bx-down-arrow-alt work__icon_download'></i>
                         </a>
                     </div>
                     <div class="work__card mix ai">
