--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         <img src="assets/img/api_screen.png" alt="" class="work__img">
                         <h3 class="work__title">Product API</h3>
                         <a href="https://rcplive.onrender.com/api/product/" class="work__button">
-                            Demo <i class='bx bx-down-arrow-alt work__icon_download'></i>
+                            Demo <i class='bx bx-right-arrow-alt work__icon_download'></i>
                         </a>
                     </div>
                     <div class="work__card mix ai">
