--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <div class="work__card mix management">
                         <img src="assets/img/main.png" alt="" class="work__img">
                         <h3 class="work__title">Banking Management</h3>
-                        <a href="http://atishbanking.herokuapp.com/" class="work__button">
+                        <a href="https://bankingv3.onrender.com/" class="work__button">
                             Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                         </a>
                     </div>
